--- a/app/src/main/res/layout/layout_login.xml
+++ b/app/src/main/res/layout/layout_login.xml
@@ -19,7 +19,7 @@
         android:text="Login"
         android:layout_marginTop="@dimen/loginViewsMargin"/>
 
-    <android.support.design.widget.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputEmail"
         style="@style/parent"
         android:layout_marginTop="@dimen/loginViewsMargin">
@@ -30,9 +30,9 @@
             android:hint="@string/login_email_hint"
             android:inputType="textEmailAddress"
             android:maxLines="1" />
-    </android.support.design.widget.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputPassword"
         style="@style/parent"
         android:layout_marginTop="@dimen/loginViewsMargin">
@@ -43,7 +43,7 @@
             android:hint="@string/login_password_hint"
             android:inputType="textPassword"
             android:maxLines="1" />
-    </android.support.design.widget.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/cirLoginButton"
