--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#1F5BF3</color>
-    <color name="colorPrimaryDark">#0947E8</color>
-    <color name="colorAccent">#00A5FF</color>
+<!--    <color name="colorPrimary">#1F5BF3</color>-->
+<!--    <color name="colorPrimaryDark">#0947E8</color>-->
+<!--    <color name="colorAccent">#00A5FF</color>-->
 
     <!--colors for modern ui-->
-    <color name="whiteTextColor">#fff</color>
-    <color name="primaryTextColor">#2661FA</color>
+<!--    <color name="whiteTextColor">#fff</color>-->
+<!--    <color name="primaryTextColor">#2661FA</color>-->
     <color name="loginBkColor">#f0f0f0</color>
 
     <!--colros for card-->
@@ -28,4 +28,24 @@
 
     <!--  new login format  -->
     <color name="purple">#8692f7</color>
+
+<!--    colors for the home page-->
+    <color name="colorPrimary">#FCFCFC</color>
+    <color name="colorPrimaryDark">#2A2E43</color>
+    <color name="colorAccent">#FF402D</color>
+    <color name="bottomNavigationTextColor">#B2B2B2</color>
+    <color name="bottomNavigationTintColor">#B2B2B2</color>
+    <color name="bottomNavigationSelectedColor">#FC4926</color>
+    <color name="statusBarColor">#000</color>
+    <color name="whiteBodyColor">#FCFCFC</color>
+    <color name="darkTextColor">#020000</color>
+    <color name="primaryTextColor">#019AE8</color>
+    <color name="whiteTextColor">#fff</color>
+    <color name="frutorial_title">#4c4c4c</color>
+
+    <!--colors for light mode-->
+    <color name="contentBodyColor">#FCFCFC</color>
+    <color name="contentTextColor">#020000</color>
+    <color name="bottomNavigationBackground">#F7F7F7</color>
+
 </resources>
