--- a/app/src/main/res/layout/card_popular_courses.xml
+++ b/app/src/main/res/layout/card_popular_courses.xml
@@ -9,7 +9,8 @@
     app:cardCornerRadius="16dp"
     android:layout_marginRight="20dp"
     android:layout_marginTop="20dp"
-    android:layout_marginBottom="20dp">
+    android:layout_marginBottom="20dp"
+    android:id="@+id/chat_card_view">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -30,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="App Developer"
+            android:text="Chat"
             android:textColor="@color/whiteTextColor"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -38,4 +39,6 @@
 
     </LinearLayout>
 
+
 </androidx.cardview.widget.CardView>
+
