--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -50,7 +50,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Continue to \nWebdeveloper Course"
+                        android:text="Welcome to \nUliza Ai"
                         android:textColor="@color/whiteBodyColor"
                         android:textStyle="bold"
                         android:textSize="17sp"/>
@@ -60,14 +60,14 @@
                         android:layout_width="150dp"
                         android:layout_height="5dp"
                         style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
-                        android:progress="60"
+                        android:progress="100"
                         android:progressDrawable="@drawable/progress_drawable"/>
 
                     <TextView
                         android:layout_marginTop="15dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="60% Complete"
+                        android:text="Ask Anything..!"
                         android:textColor="@color/whiteBodyColor"
                         android:textStyle="bold"
                         android:textSize="13sp"/>
@@ -107,7 +107,7 @@
                         android:textColor="@color/whiteTextColor"
                         android:paddingTop="5dp"
                         android:paddingBottom="5dp"
-                        android:text="Refer your friends and\n earn free course *"/>
+                        android:text="Ask More,Know More now\n With Uliza Ai"/>
 
                 </LinearLayout>
 
@@ -128,7 +128,7 @@
                 <TextView
                     android:layout_alignParentTop="true"
                     android:layout_alignParentLeft="true"
-                    android:text="Popular Courses"
+                    android:text="Categories"
                     style="@style/viewParent.headerText"/>
 
                 <TextView
@@ -146,8 +146,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <include layout="@layout/card_popular_courses"/>
-                <include layout="@layout/card_popular_courses"/>
                 <include layout="@layout/card_popular_courses"/>
 
             </LinearLayout>
