--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -93,7 +93,7 @@
             android:src="@drawable/ic_iattach" />
 
         <EditText
-            android:id="@+id/messaget"
+            android:id="@+id/message"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
