--- a/app/src/main/res/layout/row_chat.xml
+++ b/app/src/main/res/layout/row_chat.xml
@@ -1,66 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <!-- Your existing chat message layout here (the one you provided) -->
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/msglayout"
-        android:layout_width="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:padding="10dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+    <TextView
+        android:id="@+id/msgc"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="10dp">
+        android:layout_marginEnd="5dp"
+        android:layout_marginStart="8dp"
+        android:background="@drawable/rounded_rectangle"
+        android:paddingBottom="12dp"
+        android:paddingEnd="53dp"
+        android:paddingStart="8dp"
+        android:paddingTop="8dp"
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+        android:text="Hi. How are you? Some random text here and here. I need to spend more time on Android development."
+        android:textColor="@android:color/black"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintEnd_toStartOf="@+id/marginSpacer_beforeMessage"
+        app:layout_constraintHorizontal_bias="1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/profilec"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/profile_image"
-                android:visibility="gone"
-                app:civ_border_color="@null" />
+    <View
+        android:id="@+id/marginSpacer_beforeMessage"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        android:layout_marginEnd="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-            <TextView
-                android:id="@+id/timetv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="02/01/1990 06:19PM"
-                android:textColor="@color/black"
-                android:textSize="12sp" />
+    <ImageView
+        android:id="@+id/message_tail"
+        android:layout_width="14dp"
+        android:layout_height="13dp"
+        android:layout_marginEnd="3dp"
+        android:src="@drawable/tail"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/marginSpacer_beforeMessage" />
 
-            <TextView
-                android:id="@+id/msgc"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_toEndOf="@id/timetv"
-                android:background="@drawable/bg_sender"
-                android:padding="15dp"
-                android:text="His Message"
-                android:textColor="@color/black"
-                android:textSize="16sp" />
+    <ImageView
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        android:src="@drawable/green_square"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/message_tail" />
 
-            <ImageView
-                android:id="@+id/images"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:layout_alignParentEnd="true"
-                android:adjustViewBounds="true"
-                android:background="@drawable/bg_sender"
-                android:padding="15dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ic_images" />
+    <!-- Pushing down the time by adding a margin -->
+    <TextView
+        android:id="@+id/timetv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
 
-        </RelativeLayout>
+    android:layout_marginEnd="22dp"
+    android:maxLines="1"
+    android:text="14:42"
+    android:textSize="12sp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="@+id/msgc" />
 
-        <TextView
-            android:id="@+id/isSeen"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="end"
-            android:text="Delivered"
-            android:textAlignment="textEnd" />
+    <ImageView
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:layout_marginBottom="2dp"
+        android:layout_marginEnd="4dp"
+        android:src="@drawable/ic_check"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/msgc" />
 
-    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
