--- a/app/src/main/res/layout/activity_video_call_page.xml
+++ b/app/src/main/res/layout/activity_video_call_page.xml
@@ -12,6 +12,24 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <TextView
+        android:visibility="gone"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
+        android:id="@+id/cardboard_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/transparent_cardboard"
+        android:text=""
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        android:padding="16dp"
+        android:gravity="center"
+        />
+
     <!-- Button for user input -->
     <ToggleButton
         android:id="@+id/speak_button"
