--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -20,6 +20,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <TextView
+               android:id="@+id/welcomeText"
                 android:text="Hello Kapil!"
                 style="@style/viewParent.headerText"
                 />
@@ -35,7 +36,7 @@
                     android:layout_marginBottom="20dp"
                     app:cardCornerRadius="16dp"
                     app:cardPreventCornerOverlap="false"
-                    app:cardBackgroundColor="#FF402D"
+                    app:cardBackgroundColor="#128C7E"
                     app:cardElevation="10dp"
                     android:minHeight="200dp"
                     android:layout_alignParentTop="true">
@@ -92,31 +93,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/refer_earn_button"
-                    android:gravity="center"
-                    android:layout_marginLeft="60dp"
-                    android:layout_alignParentBottom="true">
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textSize="13sp"
-                        android:textAlignment="center"
-                        android:textColor="@color/whiteTextColor"
-                        android:paddingTop="5dp"
-                        android:paddingBottom="5dp"
-                        android:text="Ask More,Know More now\n With Uliza Ai"/>
 
-                </LinearLayout>
-
-                <ImageView
-                    android:layout_width="80dp"
-                    android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:cropToPadding="true"
-                    android:src="@drawable/refer_icon" />
 
             </RelativeLayout>
 
