--- a/app/src/main/res/layout/layout_login.xml
+++ b/app/src/main/res/layout/layout_login.xml
@@ -87,6 +87,8 @@
         android:textAlignment="center"
         android:id="@+id/signupText"
         android:textColor="@color/purple"
+        android:clickable    ="true"
+        android:onClick="goToSignUp"
         android:layout_marginBottom="90dp"/>
 
 </LinearLayout>
