20231017 | CHANGED LOGIN LOGIC

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -132,7 +132,7 @@
                 <TextView
                     android:layout_alignParentTop="true"
                     android:layout_alignParentLeft="true"
-                    android:text="Frutorials"
+                    android:text="Tutorials"
                     style="@style/viewParent.headerText"/>
 
                 <TextView
