--- a/app/src/main/res/layout/card_frutorials.xml
+++ b/app/src/main/res/layout/card_frutorials.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content">
     
     <androidx.cardview.widget.CardView
-        android:id="@+id/card_view"
+        android:id="@+id/youtubeCard"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         card_view:cardElevation="5dp"
