--- a/app/src/main/res/layout/layout_register.xml
+++ b/app/src/main/res/layout/layout_register.xml
@@ -48,7 +48,7 @@
                 android:drawablePadding="8dp"
                 android:hint="Email.."
                 android:padding="8dp"
-                android:textColorHint="#4c4c4c"
+                android:textColorHint="@color/hint_color"
                 android:textColor="@color/black"
                 android:textColorHighlight="@color/cardview_dark_background" />
 
@@ -62,7 +62,7 @@
                 android:drawablePadding="8dp"
                 android:hint="Password.."
                 android:inputType="textPassword"
-                android:textColorHint="#4c4c4c"
+                android:textColorHint="@color/hint_color"
                 android:padding="8dp"
                 android:textColor="@color/black"
                 android:textColorHighlight="@color/cardview_dark_background" />
@@ -76,7 +76,7 @@
                 android:drawableLeft="@drawable/lock2"
                 android:drawablePadding="8dp"
                 android:hint="Repeat Password"
-                android:textColorHint="#4c4c4c"
+                android:textColorHint="@color/hint_color"
                 android:inputType="textPassword"
                 android:padding="8dp"
                 android:textColor="@color/black"
