--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -43,6 +43,8 @@
     <color name="whiteTextColor">#fff</color>
     <color name="frutorial_title">#4c4c4c</color>
 
+    <color name="hint_color">#808080</color>
+
     <!--colors for light mode-->
     <color name="contentBodyColor">#FCFCFC</color>
     <color name="contentTextColor">#020000</color>
